Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> call NEWLINE
Rule 5     statement -> declaration NEWLINE
Rule 6     statement -> assignment NEWLINE
Rule 7     statement -> cycle NEWLINE
Rule 8     statement -> command NEWLINE
Rule 9     statement -> procedure NEWLINE
Rule 10    statement -> record NEWLINE
Rule 11    statement -> empty NEWLINE
Rule 12    declaration -> type variable
Rule 13    call -> VARIABLE L_RBRACKET variables R_RBRACKET
Rule 14    assignment -> variable ASSIGNMENT expression
Rule 15    assignment -> variable ASSIGNMENT assignment
Rule 16    cycle -> L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
Rule 17    command -> MOVEUP L_RBRACKET variable R_RBRACKET
Rule 18    command -> MOVEDOWN L_RBRACKET variable R_RBRACKET
Rule 19    command -> MOVERIGHT L_RBRACKET variable R_RBRACKET
Rule 20    command -> MOVELEFT L_RBRACKET variable R_RBRACKET
Rule 21    command -> PINGUP L_RBRACKET variable R_RBRACKET
Rule 22    command -> PINGDOWN L_RBRACKET variable R_RBRACKET
Rule 23    command -> PINGRIGHT L_RBRACKET variable R_RBRACKET
Rule 24    command -> PINGLEFT L_RBRACKET variable R_RBRACKET
Rule 25    command -> VISION L_RBRACKET variable R_RBRACKET
Rule 26    command -> VOICE L_RBRACKET expression R_RBRACKET
Rule 27    procedure -> PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
Rule 28    record -> RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
Rule 29    record -> RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
Rule 30    conversions -> conversions conversion
Rule 31    conversions -> conversion
Rule 32    conversion -> CONVERSION TO type VARIABLE
Rule 33    conversion -> CONVERSION FROM type VARIABLE
Rule 34    empty -> <empty>
Rule 35    type -> NUMERIC
Rule 36    type -> STRING
Rule 37    type -> LOGIC
Rule 38    type -> VARIABLE
Rule 39    expression -> variable
Rule 40    expression -> const
Rule 41    expression -> complex_expression
Rule 42    variables -> expression
Rule 43    variables -> expression COMMA variables
Rule 44    variable -> VARIABLE indexing
Rule 45    variable -> VARIABLE
Rule 46    indexing -> L_QBRACKET DECIMAL R_QBRACKET indexing
Rule 47    indexing -> L_QBRACKET DECIMAL R_QBRACKET
Rule 48    indexing -> L_QBRACKET VARIABLE R_QBRACKET indexing
Rule 49    indexing -> L_QBRACKET VARIABLE R_QBRACKET
Rule 50    const -> TRUE
Rule 51    const -> FALSE
Rule 52    const -> UNDEF
Rule 53    const -> DECIMAL
Rule 54    const -> TEXT
Rule 55    complex_expression -> part_expression PLUS part_expression
Rule 56    complex_expression -> part_expression MINUS part_expression
Rule 57    complex_expression -> part_expression STAR part_expression
Rule 58    complex_expression -> part_expression SLASH part_expression
Rule 59    complex_expression -> part_expression CARET part_expression
Rule 60    complex_expression -> part_expression GREATER part_expression
Rule 61    complex_expression -> part_expression LESS part_expression
Rule 62    complex_expression -> part_expression EQ part_expression
Rule 63    complex_expression -> part_expression NOTEQ part_expression
Rule 64    complex_expression -> MINUS expression
Rule 65    part_expression -> DOT expression
Rule 66    part_expression -> expression DOT
Rule 67    part_expression -> expression
Rule 68    parameters -> parameter COMMA parameters
Rule 69    parameters -> parameter
Rule 70    parameter -> declaration AMPERSAND
Rule 71    parameter -> declaration
Rule 72    statements_group -> BLOCK inner_statements UNBLOCK
Rule 73    statements_group -> inner_statement
Rule 74    inner_statements -> inner_statement inner_statements
Rule 75    inner_statements -> inner_statement
Rule 76    inner_statement -> declaration NEWLINE
Rule 77    inner_statement -> assignment NEWLINE
Rule 78    inner_statement -> cycle NEWLINE
Rule 79    inner_statement -> command NEWLINE
Rule 80    inner_statement -> call NEWLINE
Rule 81    inner_statement -> empty NEWLINE
Rule 82    statement -> error
Rule 83    declaration -> type error
Rule 84    assignment -> variable ASSIGNMENT error
Rule 85    command -> MOVEUP L_RBRACKET error R_RBRACKET
Rule 86    command -> MOVEDOWN L_RBRACKET error R_RBRACKET
Rule 87    command -> MOVERIGHT L_RBRACKET error R_RBRACKET
Rule 88    command -> MOVELEFT L_RBRACKET error R_RBRACKET
Rule 89    command -> PINGUP L_RBRACKET error R_RBRACKET
Rule 90    command -> PINGDOWN L_RBRACKET error R_RBRACKET
Rule 91    command -> PINGRIGHT L_RBRACKET error R_RBRACKET
Rule 92    command -> PINGLEFT L_RBRACKET error R_RBRACKET
Rule 93    command -> VISION L_RBRACKET error R_RBRACKET
Rule 94    command -> VOICE L_RBRACKET error R_RBRACKET

Terminals, with rules where they appear

AMPERSAND            : 70
ASSIGNMENT           : 14 15 84
BLOCK                : 16 72
CARET                : 59
COMMA                : 43 68
CONVERSION           : 32 33
DATA                 : 28 29
DECIMAL              : 46 47 53
DOT                  : 65 66
EQ                   : 62
FALSE                : 51
FROM                 : 33
GREATER              : 60
LESS                 : 61
LOGIC                : 37
L_FBRACKET           : 16
L_QBRACKET           : 27 28 29 46 47 48 49
L_RBRACKET           : 13 17 18 19 20 21 22 23 24 25 26 85 86 87 88 89 90 91 92 93 94
MINUS                : 56 64
MOVEDOWN             : 18 86
MOVELEFT             : 20 88
MOVERIGHT            : 19 87
MOVEUP               : 17 85
NEWLINE              : 4 5 6 7 8 9 10 11 76 77 78 79 80 81
NOTEQ                : 63
NUMERIC              : 35
PINGDOWN             : 22 90
PINGLEFT             : 24 92
PINGRIGHT            : 23 91
PINGUP               : 21 89
PLUS                 : 55
PROC                 : 27
RECORD               : 28 29
R_FBRACKET           : 16
R_QBRACKET           : 27 28 29 46 47 48 49
R_RBRACKET           : 13 17 18 19 20 21 22 23 24 25 26 85 86 87 88 89 90 91 92 93 94
SLASH                : 58
STAR                 : 57
STRING               : 36
TEXT                 : 54
TO                   : 32
TRUE                 : 50
UNBLOCK              : 16 72
UNDEF                : 52
VARIABLE             : 13 27 28 29 32 33 38 44 45 48 49
VISION               : 25 93
VOICE                : 26 94
error                : 82 83 84 85 86 87 88 89 90 91 92 93 94

Nonterminals, with rules where they appear

assignment           : 6 15 77
call                 : 4 80
command              : 8 79
complex_expression   : 41
const                : 40
conversion           : 30 31
conversions          : 29 30
cycle                : 7 78
declaration          : 5 70 71 76
empty                : 11 81
expression           : 14 16 26 42 43 64 65 66 67
indexing             : 44 46 48
inner_statement      : 73 74 75
inner_statements     : 16 72 74
parameter            : 68 69
parameters           : 27 28 29 68
part_expression      : 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63
procedure            : 9
program              : 0
record               : 10
statement            : 2 3
statements           : 1 2
statements_group     : 27
type                 : 12 32 33 83
variable             : 12 14 15 17 18 19 20 21 22 23 24 25 39 84
variables            : 13 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . call NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . cycle NEWLINE
    (8) statement -> . command NEWLINE
    (9) statement -> . procedure NEWLINE
    (10) statement -> . record NEWLINE
    (11) statement -> . empty NEWLINE
    (82) statement -> . error
    (13) call -> . VARIABLE L_RBRACKET variables R_RBRACKET
    (12) declaration -> . type variable
    (83) declaration -> . type error
    (14) assignment -> . variable ASSIGNMENT expression
    (15) assignment -> . variable ASSIGNMENT assignment
    (84) assignment -> . variable ASSIGNMENT error
    (16) cycle -> . L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (17) command -> . MOVEUP L_RBRACKET variable R_RBRACKET
    (18) command -> . MOVEDOWN L_RBRACKET variable R_RBRACKET
    (19) command -> . MOVERIGHT L_RBRACKET variable R_RBRACKET
    (20) command -> . MOVELEFT L_RBRACKET variable R_RBRACKET
    (21) command -> . PINGUP L_RBRACKET variable R_RBRACKET
    (22) command -> . PINGDOWN L_RBRACKET variable R_RBRACKET
    (23) command -> . PINGRIGHT L_RBRACKET variable R_RBRACKET
    (24) command -> . PINGLEFT L_RBRACKET variable R_RBRACKET
    (25) command -> . VISION L_RBRACKET variable R_RBRACKET
    (26) command -> . VOICE L_RBRACKET expression R_RBRACKET
    (85) command -> . MOVEUP L_RBRACKET error R_RBRACKET
    (86) command -> . MOVEDOWN L_RBRACKET error R_RBRACKET
    (87) command -> . MOVERIGHT L_RBRACKET error R_RBRACKET
    (88) command -> . MOVELEFT L_RBRACKET error R_RBRACKET
    (89) command -> . PINGUP L_RBRACKET error R_RBRACKET
    (90) command -> . PINGDOWN L_RBRACKET error R_RBRACKET
    (91) command -> . PINGRIGHT L_RBRACKET error R_RBRACKET
    (92) command -> . PINGLEFT L_RBRACKET error R_RBRACKET
    (93) command -> . VISION L_RBRACKET error R_RBRACKET
    (94) command -> . VOICE L_RBRACKET error R_RBRACKET
    (27) procedure -> . PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
    (28) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
    (34) empty -> .
    (35) type -> . NUMERIC
    (36) type -> . STRING
    (37) type -> . LOGIC
    (38) type -> . VARIABLE
    (44) variable -> . VARIABLE indexing
    (45) variable -> . VARIABLE

    error           shift and go to state 12
    VARIABLE        shift and go to state 13
    L_FBRACKET      shift and go to state 16
    MOVEUP          shift and go to state 17
    MOVEDOWN        shift and go to state 18
    MOVERIGHT       shift and go to state 19
    MOVELEFT        shift and go to state 20
    PINGUP          shift and go to state 21
    PINGDOWN        shift and go to state 22
    PINGRIGHT       shift and go to state 23
    PINGLEFT        shift and go to state 24
    VISION          shift and go to state 25
    VOICE           shift and go to state 26
    PROC            shift and go to state 27
    RECORD          shift and go to state 28
    NEWLINE         reduce using rule 34 (empty -> .)
    NUMERIC         shift and go to state 29
    STRING          shift and go to state 30
    LOGIC           shift and go to state 31

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    call                           shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    cycle                          shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    record                         shift and go to state 10
    empty                          shift and go to state 11
    type                           shift and go to state 14
    variable                       shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . call NEWLINE
    (5) statement -> . declaration NEWLINE
    (6) statement -> . assignment NEWLINE
    (7) statement -> . cycle NEWLINE
    (8) statement -> . command NEWLINE
    (9) statement -> . procedure NEWLINE
    (10) statement -> . record NEWLINE
    (11) statement -> . empty NEWLINE
    (82) statement -> . error
    (13) call -> . VARIABLE L_RBRACKET variables R_RBRACKET
    (12) declaration -> . type variable
    (83) declaration -> . type error
    (14) assignment -> . variable ASSIGNMENT expression
    (15) assignment -> . variable ASSIGNMENT assignment
    (84) assignment -> . variable ASSIGNMENT error
    (16) cycle -> . L_FBRACKET expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (17) command -> . MOVEUP L_RBRACKET variable R_RBRACKET
    (18) command -> . MOVEDOWN L_RBRACKET variable R_RBRACKET
    (19) command -> . MOVERIGHT L_RBRACKET variable R_RBRACKET
    (20) command -> . MOVELEFT L_RBRACKET variable R_RBRACKET
    (21) command -> . PINGUP L_RBRACKET variable R_RBRACKET
    (22) command -> . PINGDOWN L_RBRACKET variable R_RBRACKET
    (23) command -> . PINGRIGHT L_RBRACKET variable R_RBRACKET
    (24) command -> . PINGLEFT L_RBRACKET variable R_RBRACKET
    (25) command -> . VISION L_RBRACKET variable R_RBRACKET
    (26) command -> . VOICE L_RBRACKET expression R_RBRACKET
    (85) command -> . MOVEUP L_RBRACKET error R_RBRACKET
    (86) command -> . MOVEDOWN L_RBRACKET error R_RBRACKET
    (87) command -> . MOVERIGHT L_RBRACKET error R_RBRACKET
    (88) command -> . MOVELEFT L_RBRACKET error R_RBRACKET
    (89) command -> . PINGUP L_RBRACKET error R_RBRACKET
    (90) command -> . PINGDOWN L_RBRACKET error R_RBRACKET
    (91) command -> . PINGRIGHT L_RBRACKET error R_RBRACKET
    (92) command -> . PINGLEFT L_RBRACKET error R_RBRACKET
    (93) command -> . VISION L_RBRACKET error R_RBRACKET
    (94) command -> . VOICE L_RBRACKET error R_RBRACKET
    (27) procedure -> . PROC VARIABLE L_QBRACKET parameters R_QBRACKET statements_group
    (28) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> . RECORD VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions
    (34) empty -> .
    (35) type -> . NUMERIC
    (36) type -> . STRING
    (37) type -> . LOGIC
    (38) type -> . VARIABLE
    (44) variable -> . VARIABLE indexing
    (45) variable -> . VARIABLE

    $end            reduce using rule 1 (program -> statements .)
    error           shift and go to state 12
    VARIABLE        shift and go to state 13
    L_FBRACKET      shift and go to state 16
    MOVEUP          shift and go to state 17
    MOVEDOWN        shift and go to state 18
    MOVERIGHT       shift and go to state 19
    MOVELEFT        shift and go to state 20
    PINGUP          shift and go to state 21
    PINGDOWN        shift and go to state 22
    PINGRIGHT       shift and go to state 23
    PINGLEFT        shift and go to state 24
    VISION          shift and go to state 25
    VOICE           shift and go to state 26
    PROC            shift and go to state 27
    RECORD          shift and go to state 28
    NEWLINE         reduce using rule 34 (empty -> .)
    NUMERIC         shift and go to state 29
    STRING          shift and go to state 30
    LOGIC           shift and go to state 31

    statement                      shift and go to state 32
    call                           shift and go to state 4
    declaration                    shift and go to state 5
    assignment                     shift and go to state 6
    cycle                          shift and go to state 7
    command                        shift and go to state 8
    procedure                      shift and go to state 9
    record                         shift and go to state 10
    empty                          shift and go to state 11
    type                           shift and go to state 14
    variable                       shift and go to state 15

state 3

    (3) statements -> statement .

    error           reduce using rule 3 (statements -> statement .)
    VARIABLE        reduce using rule 3 (statements -> statement .)
    L_FBRACKET      reduce using rule 3 (statements -> statement .)
    MOVEUP          reduce using rule 3 (statements -> statement .)
    MOVEDOWN        reduce using rule 3 (statements -> statement .)
    MOVERIGHT       reduce using rule 3 (statements -> statement .)
    MOVELEFT        reduce using rule 3 (statements -> statement .)
    PINGUP          reduce using rule 3 (statements -> statement .)
    PINGDOWN        reduce using rule 3 (statements -> statement .)
    PINGRIGHT       reduce using rule 3 (statements -> statement .)
    PINGLEFT        reduce using rule 3 (statements -> statement .)
    VISION          reduce using rule 3 (statements -> statement .)
    VOICE           reduce using rule 3 (statements -> statement .)
    PROC            reduce using rule 3 (statements -> statement .)
    RECORD          reduce using rule 3 (statements -> statement .)
    NUMERIC         reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    LOGIC           reduce using rule 3 (statements -> statement .)
    NEWLINE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> call . NEWLINE

    NEWLINE         shift and go to state 33


state 5

    (5) statement -> declaration . NEWLINE

    NEWLINE         shift and go to state 34


state 6

    (6) statement -> assignment . NEWLINE

    NEWLINE         shift and go to state 35


state 7

    (7) statement -> cycle . NEWLINE

    NEWLINE         shift and go to state 36


state 8

    (8) statement -> command . NEWLINE

    NEWLINE         shift and go to state 37


state 9

    (9) statement -> procedure . NEWLINE

    NEWLINE         shift and go to state 38


state 10

    (10) statement -> record . NEWLINE

    NEWLINE         shift and go to state 39


state 11

    (11) statement -> empty . NEWLINE

    NEWLINE         shift and go to state 40


state 12

    (82) statement -> error .

    error           reduce using rule 82 (statement -> error .)
    VARIABLE        reduce using rule 82 (statement -> error .)
    L_FBRACKET      reduce using rule 82 (statement -> error .)
    MOVEUP          reduce using rule 82 (statement -> error .)
    MOVEDOWN        reduce using rule 82 (statement -> error .)
    MOVERIGHT       reduce using rule 82 (statement -> error .)
    MOVELEFT        reduce using rule 82 (statement -> error .)
    PINGUP          reduce using rule 82 (statement -> error .)
    PINGDOWN        reduce using rule 82 (statement -> error .)
    PINGRIGHT       reduce using rule 82 (statement -> error .)
    PINGLEFT        reduce using rule 82 (statement -> error .)
    VISION          reduce using rule 82 (statement -> error .)
    VOICE           reduce using rule 82 (statement -> error .)
    PROC            reduce using rule 82 (statement -> error .)
    RECORD          reduce using rule 82 (statement -> error .)
    NUMERIC         reduce using rule 82 (statement -> error .)
    STRING          reduce using rule 82 (statement -> error .)
    LOGIC           reduce using rule 82 (statement -> error .)
    NEWLINE         reduce using rule 82 (statement -> error .)
    $end            reduce using rule 82 (statement -> error .)


state 13

    (13) call -> VARIABLE . L_RBRACKET variables R_RBRACKET
    (38) type -> VARIABLE .
    (44) variable -> VARIABLE . indexing
    (45) variable -> VARIABLE .
    (46) indexing -> . L_QBRACKET DECIMAL R_QBRACKET indexing
    (47) indexing -> . L_QBRACKET DECIMAL R_QBRACKET
    (48) indexing -> . L_QBRACKET VARIABLE R_QBRACKET indexing
    (49) indexing -> . L_QBRACKET VARIABLE R_QBRACKET

    L_RBRACKET      shift and go to state 41
    error           reduce using rule 38 (type -> VARIABLE .)
    VARIABLE        reduce using rule 38 (type -> VARIABLE .)
    ASSIGNMENT      reduce using rule 45 (variable -> VARIABLE .)
    L_QBRACKET      shift and go to state 43

    indexing                       shift and go to state 42

state 14

    (12) declaration -> type . variable
    (83) declaration -> type . error
    (44) variable -> . VARIABLE indexing
    (45) variable -> . VARIABLE

    error           shift and go to state 45
    VARIABLE        shift and go to state 46

    variable                       shift and go to state 44

state 15

    (14) assignment -> variable . ASSIGNMENT expression
    (15) assignment -> variable . ASSIGNMENT assignment
    (84) assignment -> variable . ASSIGNMENT error

    ASSIGNMENT      shift and go to state 47


state 16

    (16) cycle -> L_FBRACKET . expression R_FBRACKET BLOCK inner_statements UNBLOCK
    (39) expression -> . variable
    (40) expression -> . const
    (41) expression -> . complex_expression
    (44) variable -> . VARIABLE indexing
    (45) variable -> . VARIABLE
    (50) const -> . TRUE
    (51) const -> . FALSE
    (52) const -> . UNDEF
    (53) const -> . DECIMAL
    (54) const -> . TEXT
    (55) complex_expression -> . part_expression PLUS part_expression
    (56) complex_expression -> . part_expression MINUS part_expression
    (57) complex_expression -> . part_expression STAR part_expression
    (58) complex_expression -> . part_expression SLASH part_expression
    (59) complex_expression -> . part_expression CARET part_expression
    (60) complex_expression -> . part_expression GREATER part_expression
    (61) complex_expression -> . part_expression LESS part_expression
    (62) complex_expression -> . part_expression EQ part_expression
    (63) complex_expression -> . part_expression NOTEQ part_expression
    (64) complex_expression -> . MINUS expression
    (65) part_expression -> . DOT expression
    (66) part_expression -> . expression DOT
    (67) part_expression -> . expression

    VARIABLE        shift and go to state 46
    TRUE            shift and go to state 52
    FALSE           shift and go to state 53
    UNDEF           shift and go to state 54
    DECIMAL         shift and go to state 55
    TEXT            shift and go to state 56
    MINUS           shift and go to state 58
    DOT             shift and go to state 59

    expression                     shift and go to state 48
    variable                       shift and go to state 49
    const                          shift and go to state 50
    complex_expression             shift and go to state 51
    part_expression                shift and go to state 57

state 17

    (17) command -> MOVEUP . L_RBRACKET variable R_RBRACKET
    (85) command -> MOVEUP . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 60


state 18

    (18) command -> MOVEDOWN . L_RBRACKET variable R_RBRACKET
    (86) command -> MOVEDOWN . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 61


state 19

    (19) command -> MOVERIGHT . L_RBRACKET variable R_RBRACKET
    (87) command -> MOVERIGHT . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 62


state 20

    (20) command -> MOVELEFT . L_RBRACKET variable R_RBRACKET
    (88) command -> MOVELEFT . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 63


state 21

    (21) command -> PINGUP . L_RBRACKET variable R_RBRACKET
    (89) command -> PINGUP . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 64


state 22

    (22) command -> PINGDOWN . L_RBRACKET variable R_RBRACKET
    (90) command -> PINGDOWN . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 65


state 23

    (23) command -> PINGRIGHT . L_RBRACKET variable R_RBRACKET
    (91) command -> PINGRIGHT . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 66


state 24

    (24) command -> PINGLEFT . L_RBRACKET variable R_RBRACKET
    (92) command -> PINGLEFT . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 67


state 25

    (25) command -> VISION . L_RBRACKET variable R_RBRACKET
    (93) command -> VISION . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 68


state 26

    (26) command -> VOICE . L_RBRACKET expression R_RBRACKET
    (94) command -> VOICE . L_RBRACKET error R_RBRACKET

    L_RBRACKET      shift and go to state 69


state 27

    (27) procedure -> PROC . VARIABLE L_QBRACKET parameters R_QBRACKET statements_group

    VARIABLE        shift and go to state 70


state 28

    (28) record -> RECORD . VARIABLE DATA L_QBRACKET parameters R_QBRACKET
    (29) record -> RECORD . VARIABLE DATA L_QBRACKET parameters R_QBRACKET conversions

    VARIABLE        shift and go to state 71


state 29

    (35) type -> NUMERIC .

    error           reduce using rule 35 (type -> NUMERIC .)
    VARIABLE        reduce using rule 35 (type -> NUMERIC .)


state 30

    (36) type -> STRING .

    error           reduce using rule 36 (type -> STRING .)
    VARIABLE        reduce using rule 36 (type -> STRING .)


state 31

    (37) type -> LOGIC .

    error           reduce using rule 37 (type -> LOGIC .)
    VARIABLE        reduce using rule 37 (type -> LOGIC .)


state 32

    (2) statements -> statements statement .

    error           reduce using rule 2 (statements -> statements statement .)
    VARIABLE        reduce using rule 2 (statements -> statements statement .)
    L_FBRACKET      reduce using rule 2 (statements -> statements statement .)
    MOVEUP          reduce using rule 2 (statements -> statements statement .)
    MOVEDOWN        reduce using rule 2 (statements -> statements statement .)
    MOVERIGHT       reduce using rule 2 (statements -> statements statement .)
    MOVELEFT        reduce using rule 2 (statements -> statements statement .)
    PINGUP          reduce using rule 2 (statements -> statements statement .)
    PINGDOWN        reduce using rule 2 (statements -> statements statement .)
    PINGRIGHT       reduce using rule 2 (statements -> statements statement .)
    PINGLEFT        reduce using rule 2 (statements -> statements statement .)
    VISION          reduce using rule 2 (statements -> statements statement .)
    VOICE           reduce using rule 2 (statements -> statements statement .)
    PROC            reduce using rule 2 (statements -> statements statement .)
    RECORD          reduce using rule 2 (statements -> statements statement .)
    NUMERIC         reduce using rule 2 (statements -> statements statement .)
    STRING          reduce using rule 2 (statements -> statements statement .)
    LOGIC           reduce using rule 2 (statements -> statements statement .)
    NEWLINE         reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)


state 33

    (4) statement -> call NEWLINE .

    error           reduce using rule 4 (statement -> call NEWLINE .)
    VARIABLE        reduce using rule 4 (statement -> call NEWLINE .)
    L_FBRACKET      reduce using rule 4 (statement -> call NEWLINE .)
    MOVEUP          reduce using rule 4 (statement -> call NEWLINE .)
    MOVEDOWN        reduce using rule 4 (statement -> call NEWLINE .)
    MOVERIGHT       reduce using rule 4 (statement -> call NEWLINE .)
    MOVELEFT        reduce using rule 4 (statement -> call NEWLINE .)
    PINGUP          reduce using rule 4 (statement -> call NEWLINE .)
    PINGDOWN        reduce using rule 4 (statement -> call NEWLINE .)
    PINGRIGHT       reduce using rule 4 (statement -> call NEWLINE .)
    PINGLEFT        reduce using rule 4 (statement -> call NEWLINE .)
    VISION          reduce using rule 4 (statement -> call NEWLINE .)
    VOICE           reduce using rule 4 (statement -> call NEWLINE .)
    PROC            reduce using rule 4 (statement -> call NEWLINE .)
    RECORD          reduce using rule 4 (statement -> call NEWLINE .)
    NUMERIC         reduce using rule 4 (statement -> call NEWLINE .)
    STRING          reduce using rule 4 (statement -> call NEWLINE .)
    LOGIC           reduce using rule 4 (statement -> call NEWLINE .)
    NEWLINE         reduce using rule 4 (statement -> call NEWLINE .)
    $end            reduce using rule 4 (statement -> call NEWLINE .)


state 34

    (5) statement -> declaration NEWLINE .

    error           reduce using rule 5 (statement -> declaration NEWLINE .)
    VARIABLE        reduce using rule 5 (statement -> declaration NEWLINE .)
    L_FBRACKET      reduce using rule 5 (statement -> declaration NEWLINE .)
    MOVEUP          reduce using rule 5 (statement -> declaration NEWLINE .)
    MOVEDOWN        reduce using rule 5 (statement -> declaration NEWLINE .)
    MOVERIGHT       reduce using rule 5 (statement -> declaration NEWLINE .)
    MOVELEFT        reduce using rule 5 (statement -> declaration NEWLINE .)
    PINGUP          reduce using rule 5 (statement -> declaration NEWLINE .)
    PINGDOWN        reduce using rule 5 (statement -> declaration NEWLINE .)
    PINGRIGHT       reduce using rule 5 (statement -> declaration NEWLINE .)
    PINGLEFT        reduce using rule 5 (statement -> declaration NEWLINE .)
    VISION          reduce using rule 5 (statement -> declaration NEWLINE .)
    VOICE           reduce using rule 5 (statement -> declaration NEWLINE .)
    PROC            reduce using rule 5 (statement -> declaration NEWLINE .)
    RECORD          reduce using rule 5 (statement -> declaration NEWLINE .)
    NUMERIC         reduce using rule 5 (statement -> declaration NEWLINE .)
    STRING          reduce using rule 5 (statement -> declaration NEWLINE .)
    LOGIC           reduce using rule 5 (statement -> declaration NEWLINE .)
    NEWLINE         reduce using rule 5 (statement -> declaration NEWLINE .)
    $end            reduce using rule 5 (statement -> declaration NEWLINE .)


state 35

    (6) statement -> assignment NEWLINE .

    error           reduce using rule 6 (statement -> assignment NEWLINE .)
    VARIABLE        reduce using rule 6 (statement -> assignment NEWLINE .)
    L_FBRACKET      reduce using rule 6 (statement -> assignment NEWLINE .)
    MOVEUP          reduce using rule 6 (statement -> assignment NEWLINE .)
    MOVEDOWN        reduce using rule 6 (statement -> assignment NEWLINE .)
    MOVERIGHT       reduce using rule 6 (statement -> assignment NEWLINE .)
    MOVELEFT        reduce using rule 6 (statement -> assignment NEWLINE .)
    PINGUP          reduce using rule 6 (statement -> assignment NEWLINE .)
    PINGDOWN        reduce using rule 6 (statement -> assignment NEWLINE .)
    PINGRIGHT       reduce using rule 6 (statement -> assignment NEWLINE .)
    PINGLEFT        reduce using rule 6 (statement -> assignment NEWLINE .)
    VISION          reduce using rule 6 (statement -> assignment NEWLINE .)
    VOICE           reduce using rule 6 (statement -> assignment NEWLINE .)
    PROC            reduce using rule 6 (statement -> assignment NEWLINE .)
    RECORD          reduce using rule 6 (statement -> assignment NEWLINE .)
    NUMERIC         reduce using rule 6 (statement -> assignment NEWLINE .)
    STRING          reduce using rule 6 (statement -> assignment NEWLINE .)
    LOGIC           reduce using rule 6 (statement -> assignment NEWLINE .)
    NEWLINE         reduce using rule 6 (statement -> assignment NEWLINE .)
    $end            reduce using rule 6 (statement -> assignment NEWLINE .)


state 36

    (7) statement -> cycle NEWLINE .

    error           reduce using rule 7 (statement -> cycle NEWLINE .)
    VARIABLE        reduce using rule 7 (statement -> cycle NEWLINE .)
    L_FBRACKET      reduce using rule 7 (statement -> cycle NEWLINE .)
    MOVEUP          reduce using rule 7 (statement -> cycle NEWLINE .)
    MOVEDOWN        reduce using rule 7 (statement -> cycle NEWLINE .)
    MOVERIGHT       reduce using rule 7 (statement -> cycle NEWLINE .)
    MOVELEFT        reduce using rule 7 (statement -> cycle NEWLINE .)
    PINGUP          reduce using rule 7 (statement -> cycle NEWLINE .)
    PINGDOWN        reduce using rule 7 (statement -> cycle NEWLINE .)
    PINGRIGHT       reduce using rule 7 (statement -> cycle NEWLINE .)
    PINGLEFT        reduce using rule 7 (statement -> cycle NEWLINE .)
    VISION          reduce using rule 7 (statement -> cycle NEWLINE .)
    VOICE           reduce using rule 7 (statement -> cycle NEWLINE .)
    PROC            reduce using rule 7 (statement -> cycle NEWLINE .)
    RECORD          reduce using rule 7 (statement -> cycle NEWLINE .)
    NUMERIC         reduce using rule 7 (statement -> cycle NEWLINE .)
    STRING          reduce using rule 7 (statement -> cycle NEWLINE .)
    LOGIC           reduce using rule 7 (statement -> cycle NEWLINE .)
    NEWLINE         reduce using rule 7 (statement -> cycle NEWLINE .)
    $end            reduce using rule 7 (statement -> cycle NEWLINE .)


state 37

    (8) statement -> command NEWLINE .

    error           reduce using rule 8 (statement -> command NEWLINE .)
    VARIABLE        reduce using rule 8 (statement -> command NEWLINE .)
    L_FBRACKET      reduce using rule 8 (statement -> command NEWLINE .)
    MOVEUP          reduce using rule 8 (statement -> command NEWLINE .)
    MOVEDOWN        reduce using rule 8 (statement -> command NEWLINE .)
    MOVERIGHT       reduce using rule 8 (statement -> command NEWLINE .)
    MOVELEFT        reduce using rule 8 (statement -> command NEWLINE .)
    PINGUP          reduce using rule 8 (statement -> command NEWLINE .)
    PINGDOWN        reduce using rule 8 (statement -> command NEWLINE .)
    PINGRIGHT       reduce using rule 8 (statement -> command NEWLINE .)
    PINGLEFT        reduce using rule 8 (statement -> command NEWLINE .)
    VISION          reduce using rule 8 (statement -> command NEWLINE .)
    VOICE           reduce using rule 8 (statement -> command NEWLINE .)
    PROC            reduce using rule 8 (statement -> command NEWLINE .)
    RECORD          reduce using rule 8 (statement -> command NEWLINE .)
    NUMERIC         reduce using rule 8 (statement -> command NEWLINE .)
    STRING          reduce using rule 8 (statement -> command NEWLINE .)
    LOGIC           reduce using rule 8 (statement -> command NEWLINE .)
    NEWLINE         reduce using rule 8 (statement -> command NEWLINE .)
    $end            reduce using rule 8 (statement -> command NEWLINE .)


state 38

    (9) statement -> procedure NEWLINE .
